Fixed style error (text-align)

--- a/src/search-form/search-form.module.css
+++ b/src/search-form/search-form.module.css
@@ -12,6 +12,7 @@
 }
 
 .formElement > div {
+  text-align: left;
   margin: 0;
 }
 
